# py-2022

./: .gitignore  2-1task.py  2-2task.py  2-4task.py  README.md  task3-6.py
Kotlov/: task_1.2_2.py
Kotlov/lesson_1.2/: task_1.2_1.py  task_1.2_3.py
Kotlov/lesson_2/: extra.py  task_1.py  task_2.py  task_3.py  task_4.py
Kotlov/lesson_3/: extra.py  task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
Kotlov/lesson_4/: extra.py  task_1.py  task_2.py  task_3.py  task_4.py
Kotlov/lesson_5/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
Kotlov/lesson_6/: .~lock.best_csv.csv#  best_csv.csv  best_json.json  task_1.py  task_2.py  task_3.py  task_4.py
k64ay/: README.md
k64ay/class_17/: app.py  (+5 more)
k64ay/drf_jwt/jwt_auth/: db.sqlite3  pyproject.toml
k64ay/drf_jwt/jwt_auth/jwt_auth/: asgi.py  settings.py  urls.py  wsgi.py
k64ay/extra_class_2/abs_base_usr/: db.sqlite3  manage.py  pyproject.toml
k64ay/extra_class_2/abs_base_usr/abs_base_usr/: settings.py  urls.py  views.py  wsgi.py
k64ay/extra_class_2/abs_base_usr/templates/: 404.html
k64ay/extra_class_2/abs_base_usr/users/: admin.py  forms.py  managers.py  models.py  tokens.py  urls.py  views.py
k64ay/extra_class_2/abs_base_usr/users/migrations/: 0001_initial.py
k64ay/extra_class_2/abs_base_usr/users/templates/: home.html  signup.html
k64ay/extra_class_2/abs_usr/: db.sqlite3  pyproject.toml
k64ay/extra_class_2/abs_usr/abs_usr/: asgi.py  settings.py  urls.py
k64ay/extra_class_2/abs_usr/users/: admin.py  models.py
k64ay/extra_class_2/abs_usr/users/migrations/: 0001_initial.py
zolvv/: README.md
(+958 files in other folders)
