[tool.poetry]
name = "abs-usr"
version = "0.1.0"
description = ""
authors = ["Aliaksandr Karpovich <k64ay@outlook.com>"]
readme = "README.md"
packages = [{include = "abs_usr"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
